# Wolt_pre-assignment-2024

./: .gitignore  README.md  pyproject.toml
delivery_fee_calculator/: main.py
delivery_fee_calculator/modules/: cost_calculator_class.py
tests/: test_main.py
tests/modules/: test_cost_calculator_class.py
