[tool.poetry]
name = "wolt-pre-assignment-2024"
version = "0.1.0"
description = ""
authors = ["akselaotso <otso.aksela@gmail.com>"]
readme = "README.md"
packages = [
    { include = "delivery_fee_calculator" },
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.26.0"}
httpx = "^0.26.0"
pytest = "^7.4.4"

[tool.poetry.scripts]
server = "uvicorn delivery_fee_calculator.main:app --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
